@@ -59,6 +59,7 @@ else
 fi
 
 UNAME=$(uname -s | tr 'A-Z' 'a-z')
+JVM_OPTIONS='--enable-native-access=ALL-UNNAMED -XX:+UnlockExperimentalVMOptions -XX:+UseCompactObjectHeaders'
 
 if [[ "$UNAME" =~ msys_nt* ]]; then
   mkdir "tmp.$$"
@@ -71,7 +72,7 @@ if [[ "$UNAME" =~ msys_nt* ]]; then
   modules="$modules,jdk.crypto.mscapi"
   ./bin/jlink --module-path ./jmods/ --add-modules "$modules" \
     --vm=server --strip-debug --no-man-pages \
-    --add-options=' --enable-native-access=ALL-UNNAMED' \
+    --add-options=" ${JVM_OPTIONS}"\
     --output reduced
   # Patch the app manifest of the java.exe launcher to force its active code
   # page to UTF-8 on Windows 1903 and later, which is required for proper
@@ -97,7 +98,7 @@ else
   cd $FULL_JDK_DIR
   ./bin/jlink --module-path ./jmods/ --add-modules "$modules" \
     --vm=server --strip-debug --no-man-pages \
-    --add-options=' --enable-native-access=ALL-UNNAMED' \
+    --add-options=" ${JVM_OPTIONS}" \
     --output reduced
   cp $DOCS legal/java.base/ASSEMBLY_EXCEPTION \
     reduced/
